# Serenichat

./: config.py  nodejs.yml  notes.md  progressweek1  pyproject.toml  python.yml  sqlmodel
