```toml
[build-system]
requires = ["hatchling", "invalidpackage"]
build-backend = "wrong.build"

[project]
name = 123
description = ["invalid", "type"]
readme = "./nonexistent/README.md"
dependencies = [
    "annotated-types == >0.6.0",
    "anyio === 4.3.0", 
    "click = 8.1.7",
    "fastapi @ 0.110.0",
    "@#$%^",
    "h11 = \"0.14.0,\"",
    "idna == 3.6; python_version > '4.0'",
    "pydantic == 2.6.3; sys_platform = 'nonexistent'",
    [],
    {"package": "sniffio"},
    "starlette >>>> 0.36.3",
    "toml = [0.10.2]",
    "typing-extensions = null",
    "uvicorn == \"broken\""
]
requires-python = ">=5.0"

authors = [
    { name = [], email = "invalid@email" },
    { name = "Missing Email" },
    "Invalid Format"
]

classifiers = [
    "Invalid :: Classifier",
    123,
    "Programming Language :: Python :: 4.0",
    ["Invalid", "List"],
    "Framework :: NonexistentFramework"
]

dynamic = ["version", "nonexistent-field"]
static = "invalid"

[project.invalid]
test = "value"
```
